--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -10,16 +10,16 @@ readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">={{ python_version }}"
 classifiers = [
-    "License :: OSI Approved :: MIT License",
-    # ? Also in CI (https://github.com/actions/python-versions/releases)
-    # "Programming Language :: Python :: 3.7",  # ? EOL (https://devguide.python.org/versions/)
-    # "Programming Language :: Python :: 3.8",  # ? EOL soon (https://devguide.python.org/versions/)
-    # "Programming Language :: Python :: 3.9",  # ? `sphinx-autobuild` broken even when pointing to fix (https://github.com/sphinx-doc/sphinx-autobuild/issues/166)
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    # "Programming Language :: Python :: 3.13",  # ? (via myst-nb) https://github.com/crate-py/rpds/issues/72
-    # "Programming Language :: Python :: 3.14",  # ? Unreleased (https://peps.python.org/pep-0745)
+  "License :: OSI Approved :: MIT License",
+  # ? Also in CI (https://github.com/actions/python-versions/releases)
+  # "Programming Language :: Python :: 3.7",  # ? EOL (https://devguide.python.org/versions/)
+  # "Programming Language :: Python :: 3.8",  # ? EOL soon (https://devguide.python.org/versions/)
+  # "Programming Language :: Python :: 3.9",  # ? `sphinx-autobuild` broken even when pointing to fix (https://github.com/sphinx-doc/sphinx-autobuild/issues/166)
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  # "Programming Language :: Python :: 3.13",  # ? (via myst-nb) https://github.com/crate-py/rpds/issues/72
+  # "Programming Language :: Python :: 3.14",  # ? Unreleased (https://peps.python.org/pep-0745)
 ]
 dependencies = []
 [project.urls]
@@ -34,10 +34,10 @@ name = "{{ project_owner_name }}"
 [tool.coverage.run]
 branch = true
 source = [
-    "{{ project_name }}",
-    "{{ project_name }}_docs",
-    "{{ project_name }}_tests",
-    "{{ project_name }}_tools",
+  "{{ project_name }}",
+  "{{ project_name }}_docs",
+  "{{ project_name }}_tests",
+  "{{ project_name }}_tools",
 ]
 
 [tool.fawltydeps]
@@ -46,12 +46,12 @@ code = ["src"]
 
 [tool.pytest.ini_options]
 addopts = """
-    --strict-config
-    --strict-markers
-    --suppress-no-test-exit-code
-    --color=yes
-    -p no:legacypaths
-    -r a
+  --strict-config
+  --strict-markers
+  --suppress-no-test-exit-code
+  --color=yes
+  -p no:legacypaths
+  -r a
 """
 cache_dir = ".cache/.pytest_cache"
 markers = "slow"
@@ -92,16 +92,8 @@ showcontent = true
 
 [tool.pyright]
 stubPath = "submodules/stubs/stubs"
-exclude = [
-  "**/.*",
-  "**/__pycache__",
-  "**/node_modules",
-  ".cache",
-  "bin",
-  "submodules",
-  "scripts/install.py",
-]
-ignore = ["**/.*", "**/__pycache__", "**/node_modules", ".cache", "bin"]
+exclude = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "bin", "submodules"]
+ignore = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "bin"]
 typeCheckingMode = "strict"
 # Default "true" in strict
 analyzeUnannotatedFunctions = true
@@ -200,7 +192,7 @@ reportUnusedCallResult = "none"
 
 [tool.ruff]
 cache-dir = ".cache/.ruff_cache"
-extend-exclude = ["bin", "submodules", "scripts/install.py"]
+extend-exclude = ["bin", "submodules"]
 extend-include = ["*.ipynb"]
 src = ["src", "docs", "scripts", "tests"]
 output-format = "grouped"
@@ -210,64 +202,64 @@ show-fixes = true
 [tool.ruff.lint]
 fixable = ["ALL"]
 select = [
-    "ALL",  # Select all rules
-    "D417", # Explicitly enable parameter check even when using Numpy docstrings
+  "ALL",  # Select all rules
+  "D417", # Explicitly enable parameter check even when using Numpy docstrings
 ]
 unfixable = [
-    "PIE790", # Don't remove `pass`/`...`, overridden in pre-commit
+  "PIE790", # Don't remove `pass`/`...`, overridden in pre-commit
 ]
 extend-safe-fixes = [
-    "F401", # Allow autofix for unused imports even in `__init__.py`
+  "F401", # Allow autofix for unused imports even in `__init__.py`
 ]
 ignore = [
-    "ANN",     # Don't require type annotations
-    "ARG005",  # Allow unused lambda argument. For consistency across df pipelines.
-    "C408",    # Allow dict calls
-    "COM",     # Allow magic commas and magic missing commas
-    "CPY001",  # Don't check for copyright
-    "D105",    # Allow missing docstring for magic methods
-    "DTZ",     # Timezones are important, but only contextually necessary.
-    "E501",    # Don't check line length. Black handles this.
-    "EM",      # Don't check for exception message issues
-    "ERA",     # False positives. Don't get rid of commented out code.
-    "FBT",     # Allow boolean "traps"
-    "FIX002",  # Allow TODOs
-    "FLY002",  # Allow different string representations
-    "FURB118", # Incorrectly applies `itemgetter`
-    "FURB140", # Don't replace comprehensions with starmap
-    "G0",      # Allow f-strings, etc. in Loguru logging
-    "ICN",     # Don't require these ad-hoc "conventional" import names
-    "INP001",  # False positives. Checks for packages missing `__init__.py`
-    "ISC",     # False positives. Implicit string concatenation is fine.
-    "PD009",   # Allow `df.iat`.
-    "PD011",   # Allow use of `.values`. False positives.
-    "PD013",   # Allow `stack` instead of `melt`. They're not a direct swap.
-    "PD101",   # Allow use of nunique(). False positives
-    "PD901",   # Allow `df` variable name. We are all consenting adults here.
-    "PD011",   # Allow use of `.values`. False positives.
-    "PLR6201", # Don't require set literal for membership checks
-    "PGH003",  # Until black stops wrapping special ignores, let's allow bare
-    "PIE804",  # Allow dict unpack even if unnecessary, consisent for df.assign{**...}
-    "PLC0105", # Dont enforce Hungarian notation for `TypeVar` variance
-    "PLC2701", # Allow private name imports
-    "PLR0913", # Allow more than five function arguments
-    "PLR0914", # Allow lots of local variables
-    "PLR0917", # Allow more than five positional arguments
-    "PLR1704", # Allow redefining arguments, often for sanitization
-    "PLR2004", # Allow magic values. This check is too sensitive
-    "PLR6201", # Don't require set literal for membership checks
-    "PLR6301", # Allow methods that don't reference self, may be overridden
-    "PLW0108", # Don't warn about unnecessary lambda. Often needed in pandas chains
-    "PLW0642", # Allow reassignment to `cls` and `self`
-    "PLW2901", # For loop variable
-    "RET",     # Return checks are flaky, Sourcery does fine analysing these paths
-    "S301",    # Don't warn about pickling.
-    "S403",    # Don't warn about pickle-like modules.
-    "S404",    # Don't warn about subprocess.
-    "TCH",     # Type checking linter doesn't play nicely with pydantic
-    "TD",      # Disable to-do validation. Too pedantic for now.
-    "TRY003",  # Allow long exception messages
-    "W2",      # Allow whitespace issues. Fixed automatically by black.
+  "ANN",     # Don't require type annotations
+  "ARG005",  # Allow unused lambda argument. For consistency across df pipelines.
+  "C408",    # Allow dict calls
+  "COM",     # Allow magic commas and magic missing commas
+  "CPY001",  # Don't check for copyright
+  "D105",    # Allow missing docstring for magic methods
+  "DTZ",     # Timezones are important, but only contextually necessary.
+  "E501",    # Don't check line length. Black handles this.
+  "EM",      # Don't check for exception message issues
+  "ERA",     # False positives. Don't get rid of commented out code.
+  "FBT",     # Allow boolean "traps"
+  "FIX002",  # Allow TODOs
+  "FLY002",  # Allow different string representations
+  "FURB118", # Incorrectly applies `itemgetter`
+  "FURB140", # Don't replace comprehensions with starmap
+  "G0",      # Allow f-strings, etc. in Loguru logging
+  "ICN",     # Don't require these ad-hoc "conventional" import names
+  "INP001",  # False positives. Checks for packages missing `__init__.py`
+  "ISC",     # False positives. Implicit string concatenation is fine.
+  "PD009",   # Allow `df.iat`.
+  "PD011",   # Allow use of `.values`. False positives.
+  "PD013",   # Allow `stack` instead of `melt`. They're not a direct swap.
+  "PD101",   # Allow use of nunique(). False positives
+  "PD901",   # Allow `df` variable name. We are all consenting adults here.
+  "PD011",   # Allow use of `.values`. False positives.
+  "PLR6201", # Don't require set literal for membership checks
+  "PGH003",  # Until black stops wrapping special ignores, let's allow bare
+  "PIE804",  # Allow dict unpack even if unnecessary, consisent for df.assign{**...}
+  "PLC0105", # Dont enforce Hungarian notation for `TypeVar` variance
+  "PLC2701", # Allow private name imports
+  "PLR0913", # Allow more than five function arguments
+  "PLR0914", # Allow lots of local variables
+  "PLR0917", # Allow more than five positional arguments
+  "PLR1704", # Allow redefining arguments, often for sanitization
+  "PLR2004", # Allow magic values. This check is too sensitive
+  "PLR6201", # Don't require set literal for membership checks
+  "PLR6301", # Allow methods that don't reference self, may be overridden
+  "PLW0108", # Don't warn about unnecessary lambda. Often needed in pandas chains
+  "PLW0642", # Allow reassignment to `cls` and `self`
+  "PLW2901", # For loop variable
+  "RET",     # Return checks are flaky, Sourcery does fine analysing these paths
+  "S301",    # Don't warn about pickling.
+  "S403",    # Don't warn about pickle-like modules.
+  "S404",    # Don't warn about subprocess.
+  "TCH",     # Type checking linter doesn't play nicely with pydantic
+  "TD",      # Disable to-do validation. Too pedantic for now.
+  "TRY003",  # Allow long exception messages
+  "W2",      # Allow whitespace issues. Fixed automatically by black.
 ]
 [tool.ruff.lint.isort]
 split-on-trailing-comma = false
@@ -277,22 +269,22 @@ skip-magic-trailing-comma = true
 convention = "numpy"
 [tool.ruff.lint.extend-per-file-ignores]
 "**/*.ipynb" = [
-    "B018", # Allow "useless" expressions, which do suppress outputs in notebooks
-    "E703", # Allow semicolons to suppress outputs in notebooks
-    "F821", # Allow undefined names, such as `display`
-    "S101", # Allow assert
-    "T201", # Allow print in notebooks
+  "B018", # Allow "useless" expressions, which do suppress outputs in notebooks
+  "E703", # Allow semicolons to suppress outputs in notebooks
+  "F821", # Allow undefined names, such as `display`
+  "S101", # Allow assert
+  "T201", # Allow print in notebooks
 ]
 "scripts/{{ project_name }}_tools/add_changes.py" = [
-    "S603", # Allow shell expressions here
-    "S607", # Allow shell expressions here
+  "S603", # Allow shell expressions here
+  "S607", # Allow shell expressions here
 ]
 "docs/**.ipynb" = [
-    "E402", # Need to allow imports below patches in docs notebooks
+  "E402", # Need to allow imports below patches in docs notebooks
 ]
 "tests/**" = [
-    "ARG001", # Allow unused arguments
-    "S101",   # Allow assert
-    "SIM300", # Allow constants (expectations) on the RHS
-    "SLF001", # Allow private member access in tests
+  "ARG001", # Allow unused arguments
+  "S101",   # Allow assert
+  "SIM300", # Allow constants (expectations) on the RHS
+  "SLF001", # Allow private member access in tests
 ]
