Sync template with self. Fix a few things

--- a/template/scripts/Initialize-Shell.ps1.jinja
+++ b/template/scripts/Initialize-Shell.ps1.jinja
@@ -40,7 +40,7 @@ function Set-Env {
     }
     if (!(Get-Command '{{ project_name }}_tools' -ErrorAction 'Ignore')) {
         'Installing tools' | Write-Progress
-        uv tool install --python-version $Version --resolution 'lowest-direct' 'scripts/.'
+        uv tool install --python $Version --resolution 'lowest-direct' 'scripts/.'
         'Tools installed' | Write-Progress -Done
     }
 
