--- a/template/scripts/pyproject.toml.jinja
+++ b/template/scripts/pyproject.toml.jinja
@@ -8,7 +8,6 @@ version = "0.0.0"
 description = "Tools."
 dependencies = [
   # ? Core script tools
-  "copier==9.2.0",
   "cyclopts==2.9.3",
   "dulwich==0.22.1",
   "ipython==8.26.0",
@@ -18,7 +17,7 @@ dependencies = [
   "toml==0.10.2 ; python_version < '3.11'",
 ]
 [project.scripts]
-"{{ project_name }}-tools" = "{{ project_name }}_tools.__main__:main"
+"{{ project_name | replace('_', '-') }}-tools" = "{{ project_name | replace('_', '-') }}_tools.__main__:main"
 "{{ project_name }}_tools" = "{{ project_name }}_tools.__main__:main"
 
 [tool.fawltydeps]
