--- a/template/scripts/pyproject.toml.jinja
+++ b/template/scripts/pyproject.toml.jinja
@@ -17,7 +17,7 @@ dependencies = [
   "toml==0.10.2 ; python_version < '3.11'",
 ]
 [project.scripts]
-"{{ project_name | replace('_', '-') }}-tools" = "{{ project_name | replace('_', '-') }}_tools.__main__:main"
+"{{ project_name | replace('_', '-') }}-tools" = "{{ project_name }}_tools.__main__:main"
 "{{ project_name }}_tools" = "{{ project_name }}_tools.__main__:main"
 
 [tool.fawltydeps]
