Fix minor things

--- a/template/scripts/Initialize-Repo.ps1.jinja
+++ b/template/scripts/Initialize-Repo.ps1.jinja
@@ -27,7 +27,7 @@ try { git commit --no-verify -m 'Lock' }
 catch [System.Management.Automation.NativeCommandExitException] { $AlreadyLocked = $true }
 
 # ? Modify GitHub repo if there were not already commits in this repo
-if ($fresh) {
+if ($Fresh) {
     if (!(git remote)) {
         git remote add origin 'https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}.git'
         git branch --move --force main
