--- a/template/scripts/Sync-Py.ps1.jinja
+++ b/template/scripts/Sync-Py.ps1.jinja
@@ -16,8 +16,9 @@ Param(
 
 'CHECKING ENVIRONMENT TYPE' | Write-Progress
 $High = $High ? $High : [bool]$Env:SYNC_PY_HIGH
+$CI = $Env:SYNC_PY_DISABLE_CI ? $null : $Env:CI
 $Devcontainer = $Env:SYNC_PY_DISABLE_DEVCONTAINER ? $null : $Env:DEVCONTAINER
-if (!$Release -and $Env:CI) { $msg = 'CI' }
+if (!$Release -and $CI) { $msg = 'CI' }
 elseif ($Devcontainer) { $msg = 'devcontainer' }
 elseif ($Release) { $msg = 'release' }
 "Will run $msg steps" | Write-Progress -Info
@@ -28,7 +29,7 @@ if ($Release) {
     return
 }
 
-if (!$Env:CI -and !$Devcontainer -and
+if (!$CI -and !$Devcontainer -and
     (Get-Command -Name 'code' -ErrorAction 'Ignore') -and
     ($Env:PYRIGHT_PYTHON_PYLANCE_VERSION)
 ) {
@@ -58,7 +59,7 @@ if (!$Env:CI -and !$Devcontainer -and
     }
 }
 '*** RUNNING PRE-SYNC TASKS' | Write-Progress
-if ($Env:CI) {
+if ($CI) {
     'SYNCING PROJECT WITH TEMPLATE' | Write-Progress
     {{ project_name }}_tools elevate-pyright-warnings
     try { scripts/Sync-Template.ps1 -Stay } catch [System.Management.Automation.NativeCommandExitException] {
@@ -77,7 +78,7 @@ if ($Devcontainer) {
         if (!($safeDirs -contains $dir)) { git config --global --add safe.directory $dir }
     }
 }
-if (!$Env:CI) {
+if (!$CI) {
     'SYNCING SUBMODULES' | Write-Progress
     Get-ChildItem '.git/modules' -Filter 'config.lock' -Recurse -Depth 1 | Remove-Item
     git submodule update --init --merge
@@ -91,7 +92,7 @@ if (!$Env:CI) {
 'DEPENDENCIES SYNCED' | Write-Progress -Done
 
 '*** RUNNING POST-SYNC TASKS' | Write-Progress
-if (!$Env:CI) {
+if (!$CI) {
     'INSTALLING PRE-COMMIT HOOKS' | Write-Progress
     pre-commit install
     'PRE-COMMIT HOOKS INSTALLED' | Write-Progress -Done
