Fix path handling

--- a/template/scripts/Initialize-Shell.ps1.jinja
+++ b/template/scripts/Initialize-Shell.ps1.jinja
@@ -42,11 +42,10 @@ function Set-Env {
         $Bin = Get-Item 'bin'
     }
     # ? Add local `bin` to path
-    $Env:PATH = "$Bin$Sep$Env:PATH"
-    if ($CI) { $EnvVars.Add("PATH", $Env:PATH) }
+    $Path = $Env:PATH = "$Bin$Sep$Env:PATH"
     # ? Set `uv` tool directory to local `bin`
     $Env:UV_TOOL_BIN_DIR = $Bin
-    $EnvVars.Add("UV_TOOL_BIN_DIR", $Bin)
+    $EnvVars.Add('UV_TOOL_BIN_DIR', $Bin)
 
     # ? Sync local `uv` version
     Sync-Uv
@@ -64,40 +63,44 @@ function Set-Env {
             if ($IsWindows) { .venv/scripts/activate.ps1 } else { .venv/bin/activate.ps1 }
         }
     }
-    if (!(Get-Command '{{ project_name }}_tools' -ErrorAction 'Ignore')) {
+    if (!(Get-Command 'copier_python_tools' -ErrorAction 'Ignore')) {
         'Installing tools' | Write-Progress
         uv tool install --force --python $Version --resolution 'lowest-direct' --editable 'scripts/.'
         'Tools installed' | Write-Progress -Done
     }
 
     # ? Get environment variables from `pyproject.toml`
-    {{ project_name }}_tools init-shell |
+    copier_python_tools init-shell |
         Select-String -Pattern '^(.+)=(.+)$' |
         ForEach-Object {
-            $EnvVars.Add($_.Matches.Groups[1].Value, $_.Matches.Groups[2].Value)
+            $Key, $Value = $_.Matches.Groups[1].Value, $_.Matches.Groups[2].Value
+            if ((($Key.ToLower() -ne 'path')) -and ($EnvVars -notcontains $Key)) {
+                $EnvVars.Add($Key, $Value)
+            }
         }
     # ? Get environment variables to update in `.env`
     $Keys = @()
     $Lines = Get-Content $EnvFile | ForEach-Object {
         $_ -replace '^(?<Key>.+)=(?<Value>.+)$', {
             $Key = $_.Groups['Key'].Value
-            if ($EnvVars.ContainsKey($Key)) {
+            if ($Key.ToLower() -eq 'path') { $PathInEnvFile = $true }
+            elseif ($EnvVars.ContainsKey($Key)) {
                 $Keys += $Key
                 return "$Key=$($EnvVars[$Key])"
             }
             return $_
         }
     }
-    # ? Get environment variables to add to `.env`
+    # ? Sync environment variables and those in `.env`
     $NewLines = $EnvVars.GetEnumerator() | ForEach-Object {
         $Key, $Value = $_.Key, $_.Value
-        Set-Item "Env:$Key" $Value
-        if (($Key.ToLower() -ne 'path') -and ($Keys -notcontains $Key)) {
-            return "$Key=$Value"
+        if ($Key.ToLower() -ne 'path') {
+            Set-Item "Env:$Key" $Value
+            if ($Keys -notcontains $Key) { return "$Key=$Value" }
         }
     }
-    # ? Update `.env`
     @($Lines, $NewLines) | Set-Content $EnvFile
+    if ($CI -and !$PathInEnvFile) { "PATH=$Path" | Add-Content $EnvFile }
 }
 
 Set-Env
