--- a/template/tests/pyproject.toml.jinja
+++ b/template/tests/pyproject.toml.jinja
@@ -18,10 +18,7 @@ dependencies = [
 deps = ["tests/pyproject.toml"]
 code = ["tests/{{ project_name }}_tests"]
 ignore_undeclared = [
-  "{{ project_name }}_docs",
-  "{{ project_name }}_tests",
-  "{{ project_name }}_tools",
-  "{{ project_name }}",
+  "{{ project_name }}_docs", "{{ project_name }}_tests", "{{ project_name }}_tools", "{{ project_name }}"
 ]
 ignore_unused = [
   # ? Core testing tools or plugins
