--- a/template/.github/workflows/ci.yml.jinja
+++ b/template/.github/workflows/ci.yml.jinja
@@ -11,55 +11,35 @@ on:
 defaults:
   run:
     shell: "pwsh"
-env:
-  UV_CACHE_DIR: ".cache/uv"
-  UV_SYSTEM_PYTHON: "true"
 jobs:
   sync:
-    strategy:
-      matrix:
-        runner: ["{{ actions_runner }}"]
-        python: ["{{ python_version }}"]
-    runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
+    runs-on: "{{ actions_runner }}"
     steps:
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
         with:
           submodules: True
-      - uses: "actions/setup-python@39cd14951b08e74b54015e9e001cdefcf80e669f" # v5.1.1
+      - uses: "astral-sh/setup-uv@9f1f1fece28798fe5e7ece00f4243abe886974b2" # v3.0.0
         with:
-          python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
-      - run: "scripts/Sync-Py.ps1"
+          version: "0.4.12"
+          enable-cache: true
+      - run: "scripts/Sync-Env.ps1"
       - uses: "actions/upload-artifact@0b2256b8c012f0828dc542b3febcab082c67f72b" # v4.3.4
         with:
           name: "lock"
-          path: "lock.json"
-      - uses: "actions/cache/save@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9" # v4.0.2
-        with:
-          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
-          key: "{% raw %}uv-${{ matrix.runner }}-${{ matrix.python }}-${{ hashFiles('lock.json') }}{% endraw %}"
+          path: |
+            uv.lock
+            requirements
   build-docs:
-    needs: "sync"
-    strategy:
-      matrix:
-        runner: ["{{ actions_runner }}"]
-        python: ["{{ python_version }}"]
-    runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
+    runs-on: "{{ actions_runner }}"
     steps:
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
         with:
           submodules: True
-      - uses: "actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16" # v4.1.8
+      - uses: "astral-sh/setup-uv@9f1f1fece28798fe5e7ece00f4243abe886974b2" # v3.0.0
         with:
-          name: "lock"
-      - uses: "actions/cache/restore@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9" # v4.0.2
-        with:
-          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
-          key: "{% raw %}uv-${{ matrix.runner }}-${{ matrix.python }}-${{ hashFiles('lock.json') }}{% endraw %}"
-      - uses: "actions/setup-python@39cd14951b08e74b54015e9e001cdefcf80e669f" # v5.1.1
-        with:
-          python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
-      - run: "scripts/Sync-Py.ps1"
-      - run: "sphinx-build -EaT docs _site"
+          version: "0.4.12"
+          enable-cache: true
+      - run: "scripts/Sync-Env.ps1; sphinx-build -EaT docs _site"
       - uses: "actions/upload-pages-artifact@56afc609e74202658d3ffba0e8f6dda462b719fa" # v3.0.1
   deploy-docs:
     if: github.event_name != 'pull_request'
@@ -67,99 +47,54 @@ jobs:
     permissions:
       pages: "write"
       id-token: "write"
-    strategy:
-      matrix:
-        runner: ["{{ actions_runner }}"]
-        python: ["{{ python_version }}"]
     environment:
       name: "github-pages"
-      url: "{% raw %}${{ steps.deployment.outputs.page_url }}{% endraw %}"
-    runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
+      url: "${{ steps.deployment.outputs.page_url }}"
+    runs-on: "{{ actions_runner }}"
     steps:
       - id: "deployment"
         uses: "actions/deploy-pages@d6db90164ac5ed86f2b6aed7e0febac5b3c0c03e" # v4.0.5
   ruff:
-    needs: "sync"
-    strategy:
-      matrix:
-        runner: ["{{ actions_runner }}"]
-        python: ["{{ python_version }}"]
-    runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
+    runs-on: "{{ actions_runner }}"
     steps:
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
         with:
           submodules: True
-      - uses: "actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16" # v4.1.8
+      - uses: "astral-sh/setup-uv@9f1f1fece28798fe5e7ece00f4243abe886974b2" # v3.0.0
         with:
-          name: "lock"
-      - uses: "actions/cache/restore@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9" # v4.0.2
-        with:
-          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
-          key: "{% raw %}uv-${{ matrix.runner }}-${{ matrix.python }}-${{ hashFiles('lock.json') }}{% endraw %}"
-      - uses: "actions/setup-python@39cd14951b08e74b54015e9e001cdefcf80e669f" # v5.1.1
-        with:
-          python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
-      - run: "scripts/Sync-Py.ps1"
-      - run: "ruff check --no-fix --output-format github ."
+          version: "0.4.12"
+          enable-cache: true
+      - run: "scripts/Sync-Env.ps1; ruff check --no-fix --output-format github ."
   fawltydeps:
-    needs: "sync"
-    strategy:
-      matrix:
-        runner: ["{{ actions_runner }}"]
-        python: ["{{ python_version }}"]
-    runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
+    runs-on: "{{ actions_runner }}"
     steps:
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
         with:
           submodules: True
-      - uses: "actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16" # v4.1.8
+      - uses: "astral-sh/setup-uv@9f1f1fece28798fe5e7ece00f4243abe886974b2" # v3.0.0
         with:
-          name: "lock"
-      - uses: "actions/cache/restore@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9" # v4.0.2
-        with:
-          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
-          key: "{% raw %}uv-${{ matrix.runner }}-${{ matrix.python }}-${{ hashFiles('lock.json') }}{% endraw %}"
-      - uses: "actions/setup-python@39cd14951b08e74b54015e9e001cdefcf80e669f" # v5.1.1
-        with:
-          python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
-      - run: "scripts/Sync-Py.ps1"
-      - run: |
-          pre-commit run fawltydeps-src
-          pre-commit run fawltydeps-docs
-          pre-commit run fawltydeps-pipeline
-          pre-commit run fawltydeps-scripts
-          pre-commit run fawltydeps-tests
+          version: "0.4.12"
+          enable-cache: true
+      - run: "scripts/Sync-Env.ps1; pre-commit run fawltydeps-src; pre-commit run fawltydeps-dev"
   pyright:
-    needs: "sync"
-    strategy:
-      matrix:
-        runner: ["{{ actions_runner }}"]
-        python: ["{{ python_version }}"]
-    runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
+    runs-on: "{{ actions_runner }}"
     steps:
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
         with:
           submodules: True
-      - uses: "actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16" # v4.1.8
+      - uses: "astral-sh/setup-uv@9f1f1fece28798fe5e7ece00f4243abe886974b2" # v3.0.0
         with:
-          name: "lock"
-      - uses: "actions/cache/restore@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9" # v4.0.2
-        with:
-          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
-          key: "{% raw %}uv-${{ matrix.runner }}-${{ matrix.python }}-${{ hashFiles('lock.json') }}{% endraw %}"
-      - uses: "actions/setup-python@39cd14951b08e74b54015e9e001cdefcf80e669f" # v5.1.1
-        with:
-          python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
-      - run: "scripts/Sync-Py.ps1"
+          version: "0.4.12"
+          enable-cache: true
+      - run: "scripts/Sync-Env.ps1"
       - uses: "jakebailey/pyright-action@3bdde3b31d26f0f1f5de051b1fbd7a536a9a4e7f" # v2.3.1
         with:
-          pylance-version: "{% raw %}${{ env.PYRIGHT_PYTHON_PYLANCE_VERSION }}{% endraw %}"
+          pylance-version: "${{ env.PYRIGHT_PYTHON_PYLANCE_VERSION }}"
   test:
-    needs: "sync"
     strategy:
       matrix:
         runner:
-          - "macos-13"
+          - "macos-14"
           - "ubuntu-22.04"
           - "windows-2022"
         python:
@@ -170,57 +105,16 @@ jobs:
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
         with:
           submodules: True
-      - uses: "actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16" # v4.1.8
+      - uses: "astral-sh/setup-uv@9f1f1fece28798fe5e7ece00f4243abe886974b2" # v3.0.0
         with:
-          name: "lock"
-      - uses: "actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9" # v4.0.2
-        with:
-          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
-          key: "{% raw %}uv-${{ matrix.runner }}-${{ matrix.python }}-${{ hashFiles('lock.json') }}{% endraw %}"
-      - uses: "actions/setup-python@39cd14951b08e74b54015e9e001cdefcf80e669f" # v5.1.1
-        with:
-          python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
-      - run: "scripts/Sync-Py.ps1 -Version '{% raw %}${{ matrix.python }}{% endraw %}'"
-      - if: (!(startsWith(matrix.runner, '{{ actions_runner.split('-')[0] }}') && (matrix.python == '{{ python_version }}')))
-        run: "pytest"
+          version: "0.4.12"
+          enable-cache: true
       # ! https://github.com/pytest-dev/pytest-cov/issues/479#issuecomment-1247444988
       - if: startsWith(matrix.runner, '{{ actions_runner.split('-')[0] }}') && matrix.python == '{{ python_version }}'
-        run: "pytest --cov --cov-config=pyproject.toml --cov-report=xml"
-      - if: startsWith(matrix.runner, '{{ actions_runner.split('-')[0] }}') && matrix.python == '{{ python_version }}'
-        run: "Remove-Item -Recurse -Force .cache/uv"
+        run: "scripts/Sync-Env.ps1; pytest --cov --cov-config=pyproject.toml --cov-report=xml"
       - if: startsWith(matrix.runner, '{{ actions_runner.split('-')[0] }}') && matrix.python == '{{ python_version }}'
         uses: "codecov/codecov-action@e28ff129e5465c2c0dcc6f003fc735cb6ae0c673" # v4.5.0
         env:
           CODECOV_TOKEN: "{% raw %}${{ secrets.CODECOV_TOKEN }}{% endraw %}"
-  lock:
-    needs:
-      - "build-docs"
-      - "ruff"
-      - "fawltydeps"
-      - "pyright"
-      - "test"
-    permissions:
-      contents: "write"
-    strategy:
-      matrix:
-        runner: ["{{ actions_runner }}"]
-        python: ["{{ python_version }}"]
-    runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
-    steps:
-      - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
-        with:
-          submodules: True
-      - uses: "actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16" # v4.1.8
-        with:
-          name: "lock"
-      - uses: "actions/cache/restore@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9" # v4.0.2
-        with:
-          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
-          key: "{% raw %}uv-${{ matrix.runner }}-${{ matrix.python }}-${{ hashFiles('lock.json') }}{% endraw %}"
-      - uses: "actions/setup-python@39cd14951b08e74b54015e9e001cdefcf80e669f" # v5.1.1
-        with:
-          python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
-      - run: "scripts/Sync-Py.ps1"
-      - uses: "stefanzweifel/git-auto-commit-action@8621497c8c39c72f3e2a999a26b4ca1b5058a842" # v5.0.1
-        with:
-          commit_message: "Sync and lock"
+      - if: (!(startsWith(matrix.runner, '{{ actions_runner.split('-')[0] }}') && matrix.python == '{{ python_version }}'))
+        run: "scripts/Sync-Env.ps1 -PythonVersion '${{ matrix.python }}'; pytest"
