--- a/template/.vscode/tasks.json.jinja
+++ b/template/.vscode/tasks.json.jinja
@@ -1,4 +1,4 @@
-// Run tasks like `pwsh -C ". scripts/Initialize-Shell.ps1; {task}` to run profile-like
+// Run tasks like `pwsh -C ". scripts/Sync-Env.ps1; {task}` to run profile-like
 // commands without requiring users to modify global profile.
 
 {
@@ -53,7 +53,7 @@
     {
       "label": "setup: Sync contributor environment",
       "type": "shell",
-      "command": "if (!$Env:DEVCONTAINER) {scripts/Sync-Py.ps1}",
+      "command": "if (!$Env:DEVCONTAINER) {scripts/Sync-Env.ps1}",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": [],
       "runOptions": {
@@ -104,14 +104,14 @@
     {
       "label": "task: pre-commit",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; pre-commit run --verbose",
+      "command": ". scripts/Sync-Env.ps1; pre-commit run --verbose",
       "icon": { "id": "git-commit" },
       "problemMatcher": []
     },
     {
       "label": "task: pre-commit (all)",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; pre-commit run --all-files --verbose",
+      "command": ". scripts/Sync-Env.ps1; pre-commit run --all-files --verbose",
       "icon": { "id": "git-commit" },
       "problemMatcher": []
     },
@@ -125,77 +125,77 @@
     {
       "label": "task: Show tree of packages requesting a dependency",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; pipdeptree --reverse --packages ${input:dependency}",
+      "command": ". scripts/Sync-Env.ps1; pipdeptree --reverse --packages ${input:dependency}",
       "icon": { "id": "versions" },
       "problemMatcher": []
     },
     {
       "label": "task: Run pytest with coverage",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; pytest --cov  --cov-config pyproject.toml --cov-report xml",
+      "command": ". scripts/Sync-Env.ps1; pytest --cov  --cov-config pyproject.toml --cov-report xml",
       "icon": { "id": "check" },
       "problemMatcher": []
     },
     {
       "label": "task: Run ruff",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; ruff check .; ruff format .",
+      "command": ". scripts/Sync-Env.ps1; ruff check .; ruff format .",
       "icon": { "id": "check" },
       "problemMatcher": []
     },
     {
       "label": "task: Run pyright",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; pyright",
+      "command": ". scripts/Sync-Env.ps1; pyright",
       "icon": { "id": "check" },
       "problemMatcher": []
     },
     {
       "label": "task: Build docs",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; {{ project_name }}_tools build-docs",
+      "command": ". scripts/Sync-Env.ps1; dev build-docs",
       "icon": { "id": "book" },
       "problemMatcher": []
     },
     {
       "label": "task: Profile this file",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; python -m cProfile -o .prof ${file}",
+      "command": ". scripts/Sync-Env.ps1; python -m cProfile -o .prof ${file}",
       "icon": { "id": "graph-line" },
       "problemMatcher": []
     },
     {
       "label": "task: View profile results with snakeviz",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; snakeviz .prof",
+      "command": ". scripts/Sync-Env.ps1; snakeviz .prof",
       "icon": { "id": "graph-line" },
       "problemMatcher": []
     },
     {
       "label": "task: Bump version",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; uvx copier@9.2.0 update --vcs-ref=HEAD --defaults --data project_version='${input:version}'; towncrier build --yes --version '${input:version}'; git add .; git commit -m '${input:version}'",
+      "command": ". scripts/Sync-Env.ps1; uvx copier@9.2.0 update --vcs-ref=HEAD --defaults --data project_version='${input:version}'; towncrier build --yes --version '${input:version}'; git add .; git commit -m '${input:version}'",
       "icon": { "id": "tag" },
       "problemMatcher": []
     },
     {
       "label": "task: Release version",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; $version = (Get-Content '.copier-answers.yml' | Select-String -Pattern '^project_version:\\s(.+)$').Matches.Groups[1].value; git tag --sign -m $version $version; git push; gh release create --discussion-category='announcements' --notes='' --title=$version --verify-tag $version",
+      "command": ". scripts/Sync-Env.ps1; $version = (Get-Content '.copier-answers.yml' | Select-String -Pattern '^project_version:\\s(.+)$').Matches.Groups[1].value; git tag --sign -m $version $version; git push; gh release create --discussion-category='announcements' --notes='' --title=$version --verify-tag $version",
       "icon": { "id": "tag" },
       "problemMatcher": []
     },
     {
       "label": "task: Update changelog",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; python -m {{ project_name }}_tools add-change ${input:changeType}",
+      "command": ". scripts/Sync-Env.ps1; python -m {{ project_name }}_tools add-change ${input:changeType}",
       "icon": { "id": "tag" },
       "problemMatcher": []
     },
     {
       "label": "task: Update changelog with the latest commit's message",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; towncrier create +$((Get-Date).ToUniversalTime().ToString('o').Replace(':','-')).change.md --content $($(git log -1 --format='%s') + ' ([' + $(git rev-parse --short HEAD) + '](https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/commit/' + $(git rev-parse HEAD) + '))\n')",
+      "command": ". scripts/Sync-Env.ps1; towncrier create +$((Get-Date).ToUniversalTime().ToString('o').Replace(':','-')).change.md --content $($(git log -1 --format='%s') + ' ([' + $(git rev-parse --short HEAD) + '](https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/commit/' + $(git rev-parse HEAD) + '))\n')",
       "icon": { "id": "tag" },
       "problemMatcher": []
     }
