--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -27,10 +27,56 @@ Tracker = "https://github.com/{{ project_owner_github_username }}/{{ github_repo
 name = "{{ project_owner_name }}"
 {% if project_email %}email = "{{ project_email }}"{% endif %}
 
+[tool.uv]
+constraints-dependencies = [
+  # ? Security
+  # ? https://nvd.nist.gov/vuln/detail/CVE-2024-37891
+  # ? via sphinx
+  "urllib3>=2.2.2",
+]
+dev-dependencies = [
+  # ? Workspaces
+  "dev",
+  # ? Dev
+  "debugpy==1.8.2",
+  "fawltydeps==0.16.0",
+  "pipdeptree==2.23.0",
+  "pre-commit==3.7.1",
+  "pyright==1.1.371",
+  "ruff==0.5.1",
+  "snakeviz==2.2.0",
+  "sourcery==1.21.0",
+  "towncrier==23.11.0",
+  # ? Docs
+  "linkify-it-py==2.0.3",
+  "myst-nb==1.1.1",
+  "myst-parser==3.0.1",
+  "sphinx-autobuild==2024.4.16",
+  "sphinx-autodoc2==0.5.0",
+  "sphinx-book-theme==1.1.3",
+  "sphinx-design==0.6.0",
+  "sphinx-thebe==0.3.1",
+  "sphinx-tippy==0.4.3",
+  "sphinx-togglebutton==0.3.2",
+  "sphinxcontrib-bibtex==2.6.2",
+  "sphinxcontrib-mermaid==0.9.2",
+  "sphinxcontrib-towncrier==0.4.0a0",
+  # ? Tests
+  "pytest-cov==5.0.0",
+  "pytest-custom-exit-code==0.3.0",
+  "pytest-github-actions-annotate-failures==0.2.0",
+  "pytest==8.2.2",
+]
+[tool.uv.pip]
+all-extras = true
+[tool.uv.workspace]
+members = ["packages/*"]
+[tool.uv.sources]
+dev = { workspace = true }
+
 [tool.coverage.run]
 branch = true
-source = ["{{ project_name }}", "{{ project_name }}_docs", "{{ project_name }}_tests", "{{ project_name }}_tools",
-]
+source = ["{{ project_name }}", "dev", "tests"]
 
 [tool.fawltydeps]
 deps = ["pyproject.toml"]
@@ -50,10 +96,9 @@ markers = "slow"
 testpaths = "tests"
 xfail_strict = true
 
-[tool.{{ project_name }}_env]
+[tool.env]
 COVERAGE_CORE = "sysmon"
 JUPYTER_PLATFORM_DIRS = "1"
-PYRIGHT_PYTHON_PYLANCE_VERSION = "2024.6.1"
 PYDEVD_DISABLE_FILE_VALIDATION = "1"
 PYTHONIOENCODING = "utf-8:strict"
 PYTHONUTF8 = "1"
@@ -83,9 +128,15 @@ name = "Changes"
 showcontent = true
 
 [tool.pyright]
-stubPath = "submodules/stubs/stubs"
-exclude = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "bin", "submodules"]
-ignore = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "bin"]
+stubPath = "typings/stubs"
+exclude = [
+  "**/node_modules",
+  "**/__pycache__",
+  "**/.*",
+  ".cache",
+  "typings",
+]
+ignore = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "typings"]
 typeCheckingMode = "strict"
 # Default "true" in strict
 analyzeUnannotatedFunctions = true
@@ -184,8 +235,8 @@ reportUnusedCallResult = "none"
 
 [tool.ruff]
 cache-dir = ".cache/.ruff_cache"
-extend-exclude = ["bin", "submodules"]
-extend-include = ["*.ipynb"]
+extend-exclude = ["packages", "typings"]
+extend-include = ["*.ipynb", "packages/_dev"]
 src = ["src", "docs", "scripts", "tests"]
 output-format = "grouped"
 fix = true
@@ -267,7 +318,7 @@ convention = "numpy"
   "S101", # Allow assert
   "T201", # Allow print in notebooks
 ]
-"scripts/{{ project_name }}_tools/add_changes.py" = [
+"packages/_dev/dev/tools/add_changes.py" = [
   "S603", # Allow shell expressions here
   "S607", # Allow shell expressions here
 ]
