--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -50,7 +50,6 @@ dev-dependencies = [
   # ? Docs
   "linkify-it-py==2.0.3",
   "myst-nb==1.1.1",
-  "myst-parser==3.0.1",
   "sphinx-autobuild==2024.4.16",
   "sphinx-autodoc2==0.5.0",
   "sphinx-book-theme==1.1.3",
@@ -129,13 +128,7 @@ showcontent = true
 
 [tool.pyright]
 stubPath = "typings/stubs"
-exclude = [
-  "**/node_modules",
-  "**/__pycache__",
-  "**/.*",
-  ".cache",
-  "typings",
-]
+exclude = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "typings"]
 ignore = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "typings"]
 typeCheckingMode = "strict"
 # Default "true" in strict
