--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -28,7 +28,7 @@ name = "{{ project_owner_name }}"
 {% if project_email %}email = "{{ project_email }}"{% endif %}
 
 [tool.uv]
-constraints-dependencies = [
+constraint-dependencies = [
   # ? Security
   # ? https://nvd.nist.gov/vuln/detail/CVE-2024-37891
   # ? via sphinx
