--- a/template/.vscode/tasks.json.jinja
+++ b/template/.vscode/tasks.json.jinja
@@ -188,7 +188,7 @@
     {
       "label": "task: Update changelog",
       "type": "shell",
-      "command": ". scripts/Sync-Env.ps1; python -m {{ project_name }}_tools add-change ${input:changeType}",
+      "command": ". scripts/Sync-Env.ps1; dev add-change ${input:changeType}",
       "icon": { "id": "tag" },
       "problemMatcher": []
     },
