--- a/template/.github/workflows/ci.yml.jinja
+++ b/template/.github/workflows/ci.yml.jinja
@@ -22,6 +22,9 @@ jobs:
         with:
           version: "0.4.12"
           enable-cache: true
+          cache-dependency-glob: |
+            **/uv.lock
+            .github/workflows/**
       - run: "scripts/Sync-Env.ps1"
       - uses: "actions/upload-artifact@0b2256b8c012f0828dc542b3febcab082c67f72b" # v4.3.4
         with:
@@ -39,6 +42,9 @@ jobs:
         with:
           version: "0.4.12"
           enable-cache: true
+          cache-dependency-glob: |
+            **/uv.lock
+            .github/workflows/**
       - run: "scripts/Sync-Env.ps1; sphinx-build -EaT docs _site"
       - uses: "actions/upload-pages-artifact@56afc609e74202658d3ffba0e8f6dda462b719fa" # v3.0.1
   deploy-docs:
@@ -64,6 +70,9 @@ jobs:
         with:
           version: "0.4.12"
           enable-cache: true
+          cache-dependency-glob: |
+            **/uv.lock
+            .github/workflows/**
       - run: "scripts/Sync-Env.ps1; ruff check --no-fix --output-format github ."
   fawltydeps:
     runs-on: "{{ actions_runner }}"
@@ -75,6 +84,9 @@ jobs:
         with:
           version: "0.4.12"
           enable-cache: true
+          cache-dependency-glob: |
+            **/uv.lock
+            .github/workflows/**
       - run: "scripts/Sync-Env.ps1; pre-commit run fawltydeps-src; pre-commit run fawltydeps-dev"
   pyright:
     runs-on: "{{ actions_runner }}"
@@ -86,6 +98,9 @@ jobs:
         with:
           version: "0.4.12"
           enable-cache: true
+          cache-dependency-glob: |
+            **/uv.lock
+            .github/workflows/**
       - run: "scripts/Sync-Env.ps1"
       - uses: "jakebailey/pyright-action@3bdde3b31d26f0f1f5de051b1fbd7a536a9a4e7f" # v2.3.1
         with:
@@ -109,6 +124,9 @@ jobs:
         with:
           version: "0.4.12"
           enable-cache: true
+          cache-dependency-glob: |
+            **/uv.lock
+            .github/workflows/**
       # ! https://github.com/pytest-dev/pytest-cov/issues/479#issuecomment-1247444988
       - if: startsWith(matrix.runner, '{{ actions_runner.split('-')[0] }}') && matrix.python == '{{ python_version }}'
         run: "scripts/Sync-Env.ps1; pytest --cov --cov-config=pyproject.toml --cov-report=xml"
